  mode, the AD bit, as provided by the name server, is available to
  applications which call res_search and related functions.  In the default
  mode, the AD bit is not set in queries, and it is automatically cleared in
  responses, indicating a lack of DNSSEC validation.  (Therefore, the name
  servers and the network path to them are treated as untrusted.)

Deprecated and removed features, and other changes affecting compatibility:

* The totalorder and totalordermag functions, and the corresponding
  functions for other floating-point types, now take pointer arguments to
  avoid signaling NaNs possibly being converted to quiet NaNs in argument
  passing.  This is in accordance with the resolution of Clarification
  Request 25 to TS 18661-1, as applied for C2X.  Existing binaries that pass
  floating-point arguments directly will continue to work.

* The obsolete function stime is no longer available to newly linked
  binaries, and its declaration has been removed from <time.h>.
  Programs that set the system time should use clock_settime instead.

* We plan to remove the obsolete function ftime, and the header <sys/timeb.h>,
  in a future version of glibc.  In this release, the header still exists
  but calling ftime will cause a compiler warning.  All programs should use
  gettimeofday or clock_gettime instead.

* The gettimeofday function no longer reports information about a
  system-wide time zone.  This 4.2-BSD-era feature has been deprecated for
  many years, as it cannot handle the full complexity of the world's
  timezones, but hitherto we have supported it on a best-effort basis.
  Changes required to support 64-bit time_t on 32-bit architectures have
  made this no longer practical.

  As of this release, callers of gettimeofday with a non-null 'tzp' argument
  should expect to receive a 'struct timezone' whose tz_minuteswest and
  tz_dsttime fields are zero.  (For efficiency reasons, this does not always